Bug 314627 - implement SVGTSpanElement.getExtentOfChar. Patch by longsonr@gmail.com, r=tor, sr=jst.